--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -7,6 +7,7 @@ consumer_key: xxx
 consumer_secret: xxx
 oauth_token: xxx
 oauth_token_secret: xxx
+retweet: true
 # image upload
 s3_access_key_id: xxx
 s3_secret_access_key: xxx
