--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -8,6 +8,7 @@ consumer_secret: xxx
 oauth_token: xxx
 oauth_token_secret: xxx
 retweet: false
+allow_tweets_without_media: false
 # image upload
 s3_access_key_id: xxx
 s3_secret_access_key: xxx
